add img & update file index & css

--- a/index.html
+++ b/index.html
@@ -267,87 +267,85 @@
         </section>
         <!-- End Portofolio -->
 
-        <!-- Footer -->
-        <section class="section-footer">
+        <section class="section-social-media">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-3 mt-5">
-                        <figure class="figure">
-                            <a href="#" class="l-footer">
-                                <img src="/images/logo/logo.png" class="figure-img img-fluid" alt="">
-                            </a>
-                            <h5 class="title text-uppercase">WikuKarno.id</h5>
-                            <div class="address">
-                                Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12 col-lg-3">
+                                <img src="/images/logo_footer.png" class="img-fluid" alt="">
+                                <h5 class="name-site mt-3">WIKUKARNO.ID</h5>
+                                <P class="description">
+                                    Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
+                                </P>
                             </div>
-                            <div class="contact-us mt-3">
-                                +62 878 - 3124 - 7352 <br> me@wikukarno.id
+                            <div class="col-12 col-lg-3">
+                                <h5>ABOUT ME</h5>
+                                <ul class="list-unstyled">
+                                    <li><a href="#">Profile</a></li>
+                                    <li><a href="#">Education</a></li>
+                                    <li><a href="#">Skill</a></li>
+                                    <li><a href="#">Portofolio</a></li>
+                                </ul>
                             </div>
-                        </figure>
-                    </div>
-                    <div class="col-12 col-lg-3 mt-5">
-                        <h5>About Me</h5>
-                        <ul>
-                            <li class="mb-1">
-                                <a href="#">Profile</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Education</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Skill</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Portofolio</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-lg-3 mt-5">
-                        <h5>Useful Link</h5>
-                        <ul>
-                            <li class="mb-1">
-                                <a href="#">Blog</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Contact Us</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Privacy Policy</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Term of Services</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-lg-3 mt-5">
-                        <h5>Social Media</h5>
-                        <ul>
-                            <li class="mb-1">
-                                <a href="#">Youtube</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Instagram</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Linkedin</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Github</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Dribbble</a>
-                            </li>
-                            <li class="mb-1">
-                                <a href="#">Behance</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-12 text-center copyright my-auto">
-                        <p> All right reserved by <a href="#">wikukarno.id</a></p>
+                            <div class="col-12 col-lg-3">
+                                <h5>USEFUL LINK</h5>
+                                <ul class="list-unstyled">
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="#">Term of Services</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-12 col-lg-3">
+                                <h5>SOCIAL MEDIA</h5>
+                                <p class="description">
+                                    If you are interested in my work, please send a message to cooperate. You can also browse my social media below to see the best works and content from me.
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li><a href="#">+62 878 - 3124 - 7352</a></li>
+                                    <li><a href="#">me@wikukarno.id</a></li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/youtube.png" alt="">
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/instagram.png" alt="">
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/linkedin.png" alt="">
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/github.png" alt="">
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/dribbble.png" alt="">
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <img src="/images/social/behance.png" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- Footer -->
+        <footer class="section-footer">
+            <div class="container-fluid">
+                <div class="row border-top justify-content-center align-items-center pt-4 mb-3">
+                    <div class="col-auto f-description font-weight-light">
+                        <script>
+                            document.writeln(new Date().getFullYear())
+                        </script>
+                        Copyright <a href="#" class="name-site">wikukarno.id</a> • All rights reserved • Made in Riau
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- End Footer -->
 
         <!-- back to top -->
