add img & update file index & css

--- a/index.html
+++ b/index.html
@@ -306,25 +306,25 @@
                                     <li><a href="#">+62 878 - 3124 - 7352</a></li>
                                     <li><a href="#">me@wikukarno.id</a></li>
                                 </ul>
-                            </div>
-                            <div class="row">
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/youtube.png" alt="">
-                                </div>
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/instagram.png" alt="">
-                                </div>
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/linkedin.png" alt="">
-                                </div>
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/github.png" alt="">
-                                </div>
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/dribbble.png" alt="">
-                                </div>
-                                <div class="col-2 col-lg-2">
-                                    <img src="/images/social/behance.png" alt="">
+                                <div class="row social-media">
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/youtube.png" alt="">
+                                    </div>
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/instagram.png" alt="">
+                                    </div>
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/linkedin.png" alt="">
+                                    </div>
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/github.png" alt="">
+                                    </div>
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/dribbble.png" alt="">
+                                    </div>
+                                    <div class="col-2 col-lg-2">
+                                        <img src="/images/social/behance.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -336,10 +336,10 @@
         <!-- Footer -->
         <footer class="section-footer">
             <div class="container-fluid">
-                <div class="row border-top justify-content-center align-items-center pt-4 mb-3">
+                <div class="row border-top justify-content-center align-items-center pt-4 mb-3 text-center">
                     <div class="col-auto f-description font-weight-light">
                         <script>
-                            document.writeln(new Date().getFullYear())
+                            document.write(new Date().getFullYear())
                         </script>
                         Copyright <a href="#" class="name-site">wikukarno.id</a> • All rights reserved • Made in Riau
                     </div>
