--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="line-mf"></div>
         </div>
         <div class="row p-content-img">
-          <div class="col-md-4 text-center">
+            <div class="col-md-4 text-center">
             <div class="portofolio-content-img text-center">
               <figure class="figure">
                     <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
@@ -243,14 +243,17 @@
                         </div>
                     </a>
                 </div>
-
-
-                <!-- <div class="p-box" data-aos="zoom-in" data-aos-delay="100">
-              <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                <div class="p-box">
-                  <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
-                </div>
-              </a>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="portofolio-content-img text-center">
+                    <figure class="figure">
+                        <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
+                            <div class="p-box">
+                                <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid" data-lightbox="gallery-mf">
+                            </div>
+                        </a>
+                        </a>
+                    </figure>
                     <a href="detail.html">
                         <div class="p-content">
                             <h2 class="p-title">Loreda Cuno Nere</h2>
@@ -260,7 +263,28 @@
                             </div>
                         </div>
                     </a>
-            </div> -->
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="portofolio-content-img text-center">
+                    <figure class="figure">
+                        <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
+                            <div class="p-box">
+                                <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid" data-lightbox="gallery-mf">
+                            </div>
+                        </a>
+                        </a>
+                    </figure>
+                    <a href="detail.html">
+                        <div class="p-content">
+                            <h2 class="p-title">Loreda Cuno Nere</h2>
+                            <div class="p-more">
+                                <span class="p-ctegory">Web Design</span> /
+                                <span class="p-date">18 Sep. 2018</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
 
         </div>
@@ -308,22 +332,34 @@
                                 </ul>
                                 <div class="row social-media">
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/youtube.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/youtube.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/instagram.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/instagram.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/linkedin.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/linkedin.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/github.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/github.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/dribbble.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/dribbble.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="col-2 col-lg-2">
-                                        <img src="/images/social/behance.png" alt="">
+                                        <a href="#">
+                                            <img src="/images/social/behance.png" alt="">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
