--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12">
-                        <div class="row">
+                        <div class="row mt-5">
                             <div class="col-12 col-lg-3">
                                 <img src="/images/logo_footer.png" class="img-fluid" alt="">
                                 <h5 class="name-site mt-3">WIKUKARNO.ID</h5>
