update file all

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Wiku Karno</title>
 
     <!-- Css -->
-    <link rel="shorcut icon" href="/images/logo/mylogo.svg">
+    <link rel="shorcut icon" href="/images/logo.png">
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/libraries/lightbox/css/lightbox.css">
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid container">
             <a class="navbar-brand" href="#">
-                <img src="/images/Logo/logo.png" class="img-fluid" alt="" />
+                <img src="/images/logo.png" class="img-fluid" alt="" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
