Update File index.html & portofolio.html & update css

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
         <div class="row p-content-img">
             <div class="col-md-4 text-center">
-            <div class="portofolio-content-img text-center">
+            <div class="portofolio-content-img text-center" data-aos="zoom-in" data-aos-delay="100">
               <figure class="figure">
                     <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
                       <div class="p-box">
@@ -233,7 +233,7 @@
                     </a>
                     </a>
                     </figure>
-                    <a href="detail.html">
+                    <a href="portofolio_detail.html">
                         <div class="p-content">
                             <h2 class="p-title">Loreda Cuno Nere</h2>
                             <div class="p-more">
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="col-md-4 text-center">
-                <div class="portofolio-content-img text-center">
+                <div class="portofolio-content-img text-center" data-aos="zoom-in" data-aos-delay="200">
                     <figure class="figure">
                         <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
                             <div class="p-box">
@@ -254,7 +254,7 @@
                         </a>
                         </a>
                     </figure>
-                    <a href="detail.html">
+                    <a href="portofolio_detail.html">
                         <div class="p-content">
                             <h2 class="p-title">Loreda Cuno Nere</h2>
                             <div class="p-more">
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="col-md-4 text-center">
-                <div class="portofolio-content-img text-center">
+                <div class="portofolio-content-img text-center" data-aos="zoom-in" data-aos-delay="300">
                     <figure class="figure">
                         <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
                             <div class="p-box">
@@ -275,7 +275,7 @@
                         </a>
                         </a>
                     </figure>
-                    <a href="detail.html">
+                    <a href="portofolio_detail.html">
                         <div class="p-content">
                             <h2 class="p-title">Loreda Cuno Nere</h2>
                             <div class="p-more">
