--- a/portofolio_detail.html
+++ b/portofolio_detail.html
@@ -57,7 +57,7 @@
     <section class="section-portofolio-gallery mt-4" id="portofolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10">
+                <div class="col-lg-10 col-xl-10" data-aos="zoom-in">
                     <transition name="slide-fade" mode="out-in">
                         <img :key="photos[activePhoto].id" :src="photos[activePhoto].url" class="main-image w-100" alt="" />
                     </transition>
@@ -66,7 +66,7 @@
                     <div class="row">
                         <div class="col-3 col-lg-12 mt-2 mt-lg-0" v-for="(photo, index) in photos" :key="photo.id" data-aos="zoom-in" data-aos-delay="100">
                             <a href="#" @click="changeActive(index)">
-                                <img :src="photo.url" class="w-100 thumbnail-image" :class="{ active: index == activePhoto }" alt="" />
+                                <img :src="photo.url" class="w-100 h-75 thumbnail-image" :class="{ active: index == activePhoto }" alt="" />
                             </a>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                         <div class="category">Web Design & Code</div>
                     </div>
                     <div class="col-lg-2" data-aos="zoom-in">
-                        <a href="#" class="btn btn-success nav-link px-4 text-white btn-block mb-3">Go to Project</a>
+                        <a href="#" class="btn btn-success nav-link px-4 text-white btn-block mb-3 mt-4">Go to Project</a>
                     </div>
                 </div>
             </div>
@@ -176,16 +176,16 @@
                 activePhoto: 0,
                 photos: [{
                     id: 1,
-                    url: "/images/p-1.jpg",
+                    url: "/images/p1.jpg",
                 }, {
                     id: 2,
-                    url: "/images/p-2.jpg",
+                    url: "/images/p2.jpg",
                 }, {
                     id: 3,
-                    url: "/images/p-3.jpg",
+                    url: "/images/p3.jpg",
                 }, {
                     id: 4,
-                    url: "/images/p-4.jpg",
+                    url: "/images/p4.jpg",
                 }, ],
             },
             methods: {
