--- a/portofolio_detail.html
+++ b/portofolio_detail.html
@@ -78,7 +78,7 @@
         <div class="portofolio-heading">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-10">
+                    <div class="col-lg-10" data-aos="zoom-in">
                         <div class="edition">Full Edition</div>
                         <h1>Buana Store Ecommerce</h1>
                         <div class="category">Web Design & Code</div>
