--- a/portofolio_detail.html
+++ b/portofolio_detail.html
@@ -78,12 +78,12 @@
         <div class="portofolio-heading">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-10" data-aos="zoom-in">
+                    <div class="col-lg-10">
                         <div class="edition">Full Edition</div>
                         <h1>Buana Store Ecommerce</h1>
                         <div class="category">Web Design & Code</div>
                     </div>
-                    <div class="col-lg-2" data-aos="zoom-in">
+                    <div class="col-lg-2">
                         <a href="#" class="btn btn-success nav-link px-4 text-white btn-block mb-3 mt-4">Go to Project</a>
                     </div>
                 </div>
