--- a/index.html
+++ b/index.html
@@ -286,12 +286,11 @@
                     </a>
                 </div>
             </div>
-
         </div>
         </section>
         <!-- End Portofolio -->
 
-        <section class="section-social-media">
+        <section class="section-footer">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12">
@@ -366,14 +365,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="section-footer">
-            <div class="container-fluid">
-                <div class="row border-top justify-content-center align-items-center pt-4 mb-3 text-center">
-                    <div class="col-auto f-description font-weight-light">
+                <div class="row justify-content-center align-items-center text-center pt-3">
+                    <div class="col-12 f-description font-weight-light">
                         <script>
                             document.write(new Date().getFullYear())
                         </script>
@@ -381,8 +374,11 @@
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- End Footer -->
+        </section>
+
+
+
+
 
         <!-- back to top -->
         <a href="# " class="to-top ">
