--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center text-center pt-3">
+                <div class="row justify-content-center align-items-center text-center pt-5 pb-3">
                     <div class="col-12 f-description font-weight-light">
                         <script>
                             document.write(new Date().getFullYear())
