update file portofolio_detail

--- a/portofolio_detail.html
+++ b/portofolio_detail.html
@@ -144,15 +144,91 @@
     <!-- back to top -->
 
     <!-- Footer -->
-    <footer class="section-footer">
+    <section class="section-footer">
         <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <p>All right reserved by <a href="#">wikukarno.id</a></p>
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="row mt-5">
+                        <div class="col-12 col-lg-3">
+                            <img src="/images/logo_footer.png" class="img-fluid" alt="">
+                            <h5 class="name-site mt-3">WIKUKARNO.ID</h5>
+                            <P class="description">
+                                Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
+                            </P>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>ABOUT ME</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Profile</a></li>
+                                <li><a href="#">Education</a></li>
+                                <li><a href="#">Skill</a></li>
+                                <li><a href="#">Portofolio</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>USEFUL LINK</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Term of Services</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>SOCIAL MEDIA</h5>
+                            <p class="description">
+                                If you are interested in my work, please send a message to cooperate. You can also browse my social media below to see the best works and content from me.
+                            </p>
+                            <ul class="list-unstyled">
+                                <li><a href="#">+62 878 - 3124 - 7352</a></li>
+                                <li><a href="#">me@wikukarno.id</a></li>
+                            </ul>
+                            <div class="row social-media">
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/youtube.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/instagram.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/linkedin.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/github.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/dribbble.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/behance.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center text-center pt-5 pb-3">
+                <div class="col-12 f-description font-weight-light">
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    Copyright <a href="#" class="name-site">wikukarno.id</a> • All rights reserved • Made in Riau
                 </div>
             </div>
         </div>
-    </footer>
+    </section>
     <!-- End Footer -->
 
     <!-- Script -->
