--- a/portofolio_detail.html
+++ b/portofolio_detail.html
@@ -79,11 +79,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-                        <div class="edition" data-aos="zoom-in" data-aos-delay="1000">Full Edition</div>
+                        <div class="edition" data-aos="zoom-in" data-aos-delay="1200">Full Edition</div>
                         <h1>Buana Store Ecommerce</h1>
                         <div class="category">Web Design & Code</div>
                     </div>
-                    <div class="col-lg-2" data-aos="zoom-in" data-aos-delay="1000">
+                    <div class="col-lg-2">
                         <a href="#" class="btn btn-primary nav-link px-4 text-white btn-block mb-3 mt-4">Go to Project</a>
                     </div>
                 </div>
