--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#about">About Me</a>
                     <a class="nav-link" href="#services">Services</a>
                     <a class="nav-link" href="#portofolio">Portofolio</a>
-                    <a class="nav-link" href="#contact">Contact Me</a
+                    <a class="nav-link" href="blog.html">Blog</a
             >
           </div>
         </div>
