--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
     </section>
 
     <!-- Main Content -->
-    <section class="section-blog mt-4" id="portofolio">
+    <section class="section-blog mt-4">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -133,7 +133,7 @@
             <div class="box-comments">
               <div class="title-box-2">
                 <h4 class="title-comments title-left">Comments (34)</h4>
-                <div class="line-mf"></div>
+                <div class="line-mf m-0"></div>
               </div>
               <ul class="list-comments mt-5">
                 <li>
@@ -204,7 +204,7 @@
             <div class="form-comments">
               <div class="title-box-2">
                 <h3 class="title-left">Leave a Reply</h3>
-                <div class="line-mf"></div>
+                <div class="line-mf m-0"></div>
               </div>
               <form class="form-mf mt-5">
                 <div class="row">
@@ -449,40 +449,6 @@
       AOS.init();
     </script>
     <script src="/libraries/vue/vue.js"></script>
-    <script>
-      var portofolio = new Vue({
-        el: "#portofolio",
-        mounted() {
-          AOS.init();
-        },
-        data: {
-          activePhoto: 0,
-          photos: [
-            {
-              id: 1,
-              url: "/images/p-1.jpg",
-            },
-            {
-              id: 2,
-              url: "/images/p-2.jpg",
-            },
-            {
-              id: 3,
-              url: "/images/p-3.jpg",
-            },
-            {
-              id: 4,
-              url: "/images/p-4.jpg",
-            },
-          ],
-        },
-        methods: {
-          changeActive(id) {
-            this.activePhoto = id;
-          },
-        },
-      });
-    </script>
     <!-- End Script -->
   </body>
 </html>
