--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h3>About</h3>
             <p class="a-information">Information about personal data</p>
           </div>
-          <div class="line-mf"></div>
+          <div class="line-mf m-auto"></div>
         </div>
         <div class="row d-flex justify-content-center mt-5">
           <div class="col-12 col-lg-8 justify-content-center text-center">
